# xentropy

./: README.md  build.sh  setup.cfg
examples/: enso_regularity.ipynb  nino34.nc
xentropy/: __init__.py  xentropy.py
