[metadata]
name = xentropy
version = 0.1.0
author = Sen Zhao
author_email = zhaos@hawaii.edu
description = "Regularity entropy measures (ApEn, SampEn, Cross-Entropy, Multiscale Entropy) for time series analysis using NumPy and Xarray."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/senclimate/xentropy
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    xarray

